--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -8,6 +8,9 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    defaults:
+        run:
+          working-directory: ./python
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
@@ -19,17 +22,17 @@ jobs:
       run: pip install
     - name: Run tests
       run: pytest --junit-xml=junit.xml test.py
-    - uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: report.xml
-        path: python/junit.xml
-        retention-days: 1
+    # - uses: actions/upload-artifact@v4
+    #   if: always()
+    #   with:
+    #     name: report.xml
+    #     path: python/junit.xml
+    #     retention-days: 1
     
     - name: Report to Ultralight
       uses: ultralightlabs/ultralight-github-action@main
       with:
         ultralight-secret-key: ${{secrets.ULTRALIGHT_GH_ACTION_SECRET_KEY}}
-        test-report-path: python/junit.xml
+        test-report-path: junit.xml
         ultralight-product-id: ${{secrets.ULTRALIGHT_GH_ACTION_PRODUCT_ID}}
 
