--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -20,18 +20,18 @@ jobs:
       run: pip install -r requirements.txt
     - name: Run tests
       run: pytest --junit-xml=junit.xml test.py
-    - uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: report.xml
-        path: python/junit.xml
-        retention-days: 1
+    # - uses: actions/upload-artifact@v4
+    #   if: always()
+    #   with:
+    #     name: report.xml
+    #     path: python/junit.xml
+    #     retention-days: 1
     
     - name: Report to Ultralight
       if: always()
       uses: ultralightlabs/ultralight-github-action@main
       with:
         ultralight-secret-key: ${{secrets.ULTRALIGHT_GH_ACTION_SECRET_KEY}}
-        test-report-path: report.xml
+        test-report-path: python/junit.xml
         ultralight-product-id: ${{secrets.ULTRALIGHT_GH_ACTION_PRODUCT_ID}}
 
