--- a/next/test_protocols/ver4.yml
+++ b/next/test_protocols/ver4.yml
@@ -4,5 +4,5 @@ description: Rendering test for Hello World div
 steps:
   - step: Navigate to homepage
     acceptance_criteria: Successfully navigated to homepage
-  - step: Check if "Hello world!" text is visible
-    acceptance_criteria: "Hello world!" text is visible
+  - step: 'Check if "Hello world!" text is visible'
+    acceptance_criteria: '"Hello world!" text is visible'
