--- a/python/test_protocols/ver1.yaml
+++ b/python/test_protocols/ver1.yaml
@@ -1,9 +1,11 @@
+
+
+
 ultralight-test-id: VER-1
-title: Test Insert Success
+title: Test Hash Table Insert Success
 description: Tests whether or not items can be successfully inserted in the hash table
 steps:
   - step: Insert item
     acceptance_criteria: Item insertion is successful
   - step: Retrieve item
-    acceptance_criteria: Item retrieval is successful
-  - step: Check if item retrieved is same as item inserted
+    acceptance_criteria: Item retrieval is same as item inserted
