--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Run tests
       run: pytest --junit-xml=junit.xml test.py
     - name: Report to Ultralight
-      if: always()
+      if: github.ref == 'refs/heads/main'
       uses: ultralightlabs/ultralight-github-action@v1
       with:
         ultralight-api-key: ${{secrets.ULTRALIGHT_GH_ACTION_SECRET_KEY}}
