Switch over docs to use underscored IDs

--- a/next/test_protocols/ver4.yml
+++ b/next/test_protocols/ver4.yml
@@ -1,4 +1,4 @@
-ultralight-test-id: VER-4
+ultralight_test_id: VER-4
 title: Has Hello World on homepage
 description: Rendering test for Hello World div
 steps:
