--- a/python/test_protocols/ver1.yaml
+++ b/python/test_protocols/ver1.yaml
@@ -3,6 +3,6 @@ title: Test Hash Table Insert Success
 description: Tests whether or not items can be successfully inserted in the hash table
 steps:
   - step: Insert item
-    acceptance_criteria: Item insertion is successful
+    acceptance_criteria: Operation is successful
   - step: Retrieve item
     acceptance_criteria: Item retrieved is same as item inserted
