--- a/.github/workflows/report-commit.yml
+++ b/.github/workflows/report-commit.yml
@@ -13,7 +13,13 @@ jobs:
           node-version: '20'
 
       - name: Report commit to Ultralight
+        id: report-commit
         uses: ultralightlabs/ultralight-github-action@v1
         with:
           command: REPORT_COMMIT
           ultralight-api-key: ${{secrets.ULTRALIGHT_GH_ACTION_SECRET_KEY}}
+
+      - name: Next step
+        run: |
+          echo '${{ steps.report-commit.outputs.merge-block }}'
+          echo '${{ steps.report-commit.outputs.report-commit-data }}' | jq '.updatedSoftwarePartVersions'
